File upload ext (bug fix)

--- a/themes/admin/static/css/admin.css
+++ b/themes/admin/static/css/admin.css
@@ -1,6 +1,9 @@
 img.img-thumbnail, img.big-img{
     max-height: 400px;
 }
+img.small-img{
+    max-height: 200px;
+}
 .field-slide-img .cropbox, .text-center-align{
     text-align: center;
 }
