--- a/themes/front/static/css/front.css
+++ b/themes/front/static/css/front.css
@@ -57,3 +57,33 @@ p.tags-list {
 div.cropbox {
     margin-bottom: 0;
 }
+.text-align-left {
+    text-align: left !important;
+}
+.margin-left-20 {
+    margin-left: 20px !important;
+}
+.margin-left-30 {
+    margin-left: 30px !important;
+}
+.margin-left-40 {
+    margin-left: 40px !important;
+}
+.margin-left-50 {
+    margin-left: 50px !important;
+}
+.margin-left-60 {
+    margin-left: 60px !important;
+}
+.margin-left-70 {
+    margin-left: 70px !important;
+}
+.margin-left-80 {
+    margin-left: 80px !important;
+}
+.margin-left-90 {
+    margin-left: 90px !important;
+}
+.margin-left-100 {
+    margin-left: 100px !important;
+}
